<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:minWidth="280dp"
    android:orientation="vertical"
    tools:context=".Dialog.ConfirmDialogActivity">

    <TextView
        android:id="@+id/confirm_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#00000000"
        android:textColor="@color/blue_2"
        android:gravity="center"
        android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_2" />
    <TextView
        android:id="@+id/confirm_dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:text="Message" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/confirm_dialog_btn1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_left_round"
            android:gravity="center"
            android:text="@string/Dialog_OK"
            android:textSize="16sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/confirm_dialog_btn2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_center_round"
            android:gravity="center"
            android:rotationX="10"
            android:text="@string/Dialog_Discard"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/confirm_dialog_btn3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_right_round"
            android:text="@string/Dialog_Cancel"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>