<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectPrint.DirectPrintActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/linearlayout_style_1" >

        <TextView
            android:id="@+id/textView108"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="No."
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView119"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/linearlayout_style_1" >

        <TextView
            android:id="@+id/textView109"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Carton ID"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView120"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/linearlayout_style_1" >

        <TextView
            android:id="@+id/textView110"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Mfg Part No."
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView121"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@drawable/linearlayout_style_1" >

        <TextView
            android:id="@+id/textView111"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Quantity"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView122"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:background="@drawable/linearlayout_style_1" >

        <TextView
            android:id="@+id/textView118"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Cross-Ref No."
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:singleLine="true" />
    </LinearLayout>

    <ListView
        android:id="@+id/DirectPrint_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:listitem="@layout/view_directprint_list_item"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DirectPrint_MergeToBigbtn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textAllCaps="false"
            android:text="@string/DirectPrint_btn5" />
        <Button
            android:id="@+id/DirectPrint_SplitInnerbtn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textAllCaps="false"
            android:text="@string/DirectPrint_btn6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DirectPrint_Undobtn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textAllCaps="false"
            android:text="@string/DirectPrint_btn7" />

        <Button
            android:id="@+id/DirectPrint_Finishbtn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textAllCaps="false"
            android:text="@string/DirectPrint_btn8" />
    </LinearLayout>
</LinearLayout>