<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Prescan.PrescanMergeToBigCartonActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".Prescan.PrescanMergeToBigCartonActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cartion No." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/DirectPrint_Carton_No_EditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_bg2"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <ImageButton
                android:id="@+id/DirectPrint_ImgBut"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/dialog_bg2"
                app:srcCompat="@android:drawable/ic_menu_edit" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Item No." />

        <TextView
            android:id="@+id/DirectPrint_ItemNo_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total Quantity" />

        <TextView
            android:id="@+id/DirectPrint_TotalQty_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:text="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#00000000" />

        <ListView
            android:id="@+id/DirectPrint_merge_to_big_ListView"
            android:layout_width="match_parent"
            android:layout_height="285dp"
            tools:listitem="@layout/merge_to_big_line_2">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DirectPrint_but3"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textAllCaps="false"
                android:text="" />

            <Button
                android:id="@+id/DirectPrint_MergeToBig_Undobtn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textAllCaps="false"
                android:text="@string/DirectPrint_btn3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DirectPrint_MergeToBig_Cancelbtn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textAllCaps="false"
                android:text="@string/DirectPrint_btn2" />

            <Button
                android:id="@+id/DirectPrint_MergeToBig_Finishbtn"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textAllCaps="false"
                android:text="@string/DirectPrint_btn1" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>